# japanai-demo-app

./: .gitignore  FEATURES.MD  README.md
.claude/: settings.local.json
backend/: .env.example  README.md  config.py  main-openai.py  main.py  models.py  pyproject.toml  quality.sh  tools.py  utils.py
docs/: as-is-guide.md  features.md  tool-call-sequence-diagram.md
frontend/: README.md  env.txt  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: MyRuntimeProvider.tsx  layout.tsx
frontend/components/assistant-ui/: thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
frontend/components/tool-ui/data-table/: _ui.tsx  data-table-styles.ts  formatters.tsx  index.tsx  schema.ts
frontend/components/ui/: accordion.tsx
